--- a/cloud-basic-server/cloud-admin/src/resources/application-test.yml
+++ b/cloud-basic-server/cloud-admin/src/resources/application-test.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8761
+  port: 8762
 
 spring:
-  application:
-    name: eureka-server
   #eureka权限配置
   security:
+    basic:
+      enabled: true
     user:
       name: admin
       password: admin
@@ -14,25 +14,16 @@ spring:
 eureka:
   instance:
     #注册到eureka ip地址
-    hostname: localhost
-    prefer-ip-address: true
-    leaseRenewalIntervalInSeconds: 10
-    health-check-url-path: /actuator/health
+    hostname: summer.com
   client:
     #因为自己是为注册中心，不需要自己注册自己
     register-with-eureka: false
     #因为自己是为注册中心，不需要检索服务
     fetch-registry: false
     service-url:
-      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: https://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.hostname}:${server.port}/eureka/
       #剔除失效服务间隔
       eviction-interval-timer-in-ms: 2000
   server:
     #是否开启安全保护，默认是开启的，如果默认开启，注册中心的服务列表就算有些服务断开了，也会继续保存
     enable-self-preservation: false
-    # 清理间隔（单位毫秒，默认是60*1000）启用主动失效，并且每次主动失效检测间隔为3s
-    eviction-interval-timer-in-ms: 5000
-
-logging:
-  level:
-    com.netflix: warn
