--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <module>cloud-biz-api</module>
         <module>cloud-biz-server</module>
         <module>cloud-transaction</module>
-    </modules>
+      </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -55,6 +55,11 @@
             <dependency>
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin-starter-server</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
                 <version>2.3.0</version>
             </dependency>
             <dependency>
