项目初始化

--- a/cloud-basic-server/cloud-admin/src/resources/application.yml
+++ b/cloud-basic-server/cloud-admin/src/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 #eureka连接信息
 eureka:
   instance:
-    hostname: localhost
+    hostname: summer.com
   client:
     register-with-eureka: true
     fetch-registry: true
