--- a/cloud-basic-server/cloud-config/src/main/resources/application.yml
+++ b/cloud-basic-server/cloud-config/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 #eureka连接信息
 eureka:
   instance:
-    hostname: localhost
+    hostname: summer.com
   client:
     enabled: true
     register-with-eureka: true
