--- a/cloud-basic-server/cloud-eureka/src/main/resources/application.yml
+++ b/cloud-basic-server/cloud-eureka/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 eureka:
   instance:
     #注册到eureka ip地址
-    hostname: localhost
+    hostname: summer.com
     prefer-ip-address: true
     leaseRenewalIntervalInSeconds: 10
     health-check-url-path: /actuator/health
