--- a/cloud-biz-server/pom.xml
+++ b/cloud-biz-server/pom.xml
@@ -4,10 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.it</groupId>
-    <artifactId>cloud-biz-server</artifactId>
-    <version>1.0</version>
+    <parent>
+        <groupId>com.it</groupId>
+        <artifactId>cloud-platform</artifactId>
+        <version>1.0</version>
+    </parent>
 
-    <name>cloud-biz-server</name>
+    <artifactId>cloud-biz-server</artifactId>
     <packaging>pom</packaging>
 </project>
